# hike-tracker

./: CLAUDE.md  Cargo.toml  Dockerfile  Rocket.toml  compose.yml
migrations/2025-12-31-100000_add_group_number_route/: down.sql  up.sql
migrations/2026-01-28-100000_add_post_password/: down.sql  up.sql
src/: auth.rs  cache.rs  db.rs  main.rs  models.rs  schema.rs  stats.rs
src/routes/: auth.rs  dashboard.rs  mod.rs  post.rs  ranking.rs  scan.rs
src/routes/admin/: groups.rs  posts.rs
src/routes/scan/: edit.rs  mod.rs
static/: style.css
templates/: base.html.tera  dashboard.html.tera  login.html.tera  post_overview.html.tera  ranking.html.tera  scan.html.tera  scan_edit.html.tera  scan_new_group.html.tera
templates/admin/: groups.html.tera  posts.html.tera
