[package]
name = "hike-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = "2.2"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
bcrypt = "0.15"
serde_json = "1.0"
